Developer/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActionHistory__c</fullName>
        <label>対応履歴</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>対応内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreateDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>起票日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeadLine__c</fullName>
        <label>期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <picklist>
            <picklistValues>
                <fullName>陳さん</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>芳賀</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active(JP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active(US)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active(User)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Recieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>種別</label>
        <picklist>
            <picklistValues>
                <fullName>英語</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>技術</fullName>
                <color>#66FFFF</color>
            </picklistValues>
            <picklistValues>
                <fullName>家</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>仕事</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>